[package]
name = "cobalt-migrator"
version = "0.0.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astra_formats = { git = "https://github.com/thane98/astra-formats", default-features = true, features = ["msbt_script"] }
clap = { version = "4.3.22", features = ["derive"] }
gag = "1.0.0"
pathdiff = "0.2.1"
phf = { version = "0.11", features = ["macros"] }
remove_empty_subdirs = "0.1.1"
walkdir = "2"
